feat: Implement callback URL validation with configurable local callback allowance